# SongLed

./: .gitignore  CHANGELOG.md  CHANGELOG_2026-01-28.md  CMakeLists.txt  DOCUMENTATION_GUIDE.md  EXECUTION_SUCCESS_REPORT.md  FILES_INDEX.md  FINAL_DELIVERY_REPORT.md  GITHUB_RELEASE_SUMMARY.md  GITHUB_SETUP_GUIDE.md  LICENSE  PREPARATION_COMPLETE.md  QUICK_REFERENCE.md  README.md  README_MULTILINGUAL.md  RELEASE_CHECKLIST.md  THIRD_PARTY.md  TODO.md  analyze-flasher-deps.ps1  build-release.ps1  build.ps1  cleanup.bat  cleanup.sh  platformio.ini  push-to-github.sh  sdkconfig  sdkconfig.esp32s3  songled.sln  verify-release.ps1
docs/: AGENT_HANDOFF.md  ARC_ADJUST_UI_SPEC.md  BLE_IMPLEMENTATION.md  COMPLETE_CHANGES_SUMMARY.md  CURRENT_HANDOFF.md  HANDOFF.md
partitions/: default_16MB.csv
pc/: ble_bridge_test.py  requirements.txt  win_audio_bridge.py
pc/SongLedFlasher/: Program.cs  SongLedFlasher.csproj
pc/SongLedPc/: BleLinkClient.cs  DeviceConfig.cs  DeviceConfigManager.cs  Program.cs  SmtcBridge.cs  SongLedPc.csproj
pc/SongLedPcCpp/: CMakeLists.txt  main.cpp
release/v0.0.2/: INSTALL.md  PUBLISH_FILES.txt  README.md  RELEASE_NOTES.md
release/v0.0.2/flasher/: README.txt
release/v0.0.2/flasher/_contrib/intelhex-2.3.0.dist-info/: RECORD
src/: CMakeLists.txt  astra_animation.cpp  ble_service.cpp  ble_service.h  config_manager.h  font8x8_basic.h  hal_astra_esp32.cpp  hal_astra_esp32.h  main.c  main.cpp  u8g2_font_zpix.c
